packages/apex-parser-ast/test/fixtures/validation/syntax-error/UnexpectedEof.cls
public class UnexpectedEof {
    public void test() {
